# mythicalgebra

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
mythicalgebra/: core.py
tests/: test_core.py
