[project]
name = "mythicalgebra"
version = "0.1.0"
description = "A modular system for modeling myths as structured combinations of narrative elements."
authors = [{ name = "Pierre-Louis Suckrow", email = "suckrowpierre@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
